@@ -58,4 +58,5 @@ devilspie.spec
 Makefile
 src/Makefile
 po/Makefile.in
+tests/Makefile
 ])
