@@ -3,4 +3,5 @@ Makefile.in
 devilspie
 config.h
 config.h.in
+sexp-test
 stamp-h1
